Closed Bug 1657262 Opened 5 years ago Closed 5 years ago

Fix TextureFlags::WAIT_HOST_USAGE_END handling

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox81 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

TextureFlags::WAIT_HOST_USAGE_END is not handled correctly. It could increase peak memory use.

Assignee: nobody → sotaro.ikeda.g
Blocks: 1649110
Regressed by: 1556340
Has Regression Range: --- → yes
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fedfa6cbb240 Fix TextureFlags::WAIT_HOST_USAGE_END handling r=mattwoodrow
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: