Bug 1657262 - Fix TextureFlags::WAIT_HOST_USAGE_END handling r=mattwoodrow

TextureClient that has TextureFlags::WAIT_HOST_USAGE_END needs to receive NotifyNotUsed from host side.

Differential Revision: https://phabricator.services.mozilla.com/D85962